# wxauto4

./: README.md  pyproject.toml
wxauto4/: param.py  ui_config.py  wx.py
wxauto4/msgs/: base.py  friend.py  msg.py  mtype.py  self.py
wxauto4/ui/: base.py  chatbox.py  component.py  main.py  navigationbox.py  sessionbox.py
wxauto4/utils/: tools.py
