[project]
name = "wxauto4"
version = "41.0.0"
description = "wxauto for 4.1 client"
authors = [
    {name = "Cluic", email = "tikic@qq.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "tenacity",
    "pywin32",
    "pyperclip",
    "pillow",
    "psutil",
    "colorama",
    "comtypes"
]

[project.scripts]
wxauto4 = "wxauto4.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
